--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -327,18 +327,16 @@
             <span class="bg-danger" ng-show="editAppForm.publicUrl.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
           </div>
 
-          <label>Emails (fields can be empty)</label>
-          <div class="row form-group" data-ng-repeat = "mail in updateEmails">
-            <div class="col-xs-4">
-              <input type="email"
-                     ng-model="mail.name"
-                     name=""
-                     class = "form-control">
-            </div>
-            <a ng-show="showNewMailFieldForUpdate(mail)" ng-click="addMailFieldForUpdate()" class="btn btn-info"><span class="glyphicon glyphicon-plus-sign"></span></a>
-            <a ng-show="showNewMailFieldForUpdate(mail)" ng-click="removeMailFieldForUpdate()" class="btn btn-info"><span class="glyphicon glyphicon-minus-sign"></span></a>
+          <div class="form-group"
+              ng-class="{'has error': edditAppForm.privatePath.$invalid && editAppForm.checkPath.$dirty}">
+            <label for="inAppPrivatePath">Private path</label>
+            <input type="text" ng-model="newApp.privatePath" class="form-control " id="inAppPrivatePath"
+                   name="privatepath"
+                   ng-pattern="/^//"
+                   required
+                   placeholder="Enter private path">
+            <span class="bg-danger" ng-show="editAppForm.privatepath.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
           </div>
-
 
           <div class="form-group"
                ng-class="{'has-error': editAppForm.checkPath.$invalid && editAppForm.checkPath.$dirty}">
@@ -349,6 +347,18 @@
                    required
                    placeholder="Enter check path">
             <span class="bg-danger" ng-show="editAppForm.checkPath.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
+          </div>
+
+          <label>Emails (fields can be empty)</label>
+          <div class="row form-group" data-ng-repeat = "mail in updateEmails">
+            <div class="col-xs-4">
+              <input type="email"
+                     ng-model="mail.name"
+                     name=""
+                     class = "form-control">
+            </div>
+            <a ng-show="showNewMailFieldForUpdate(mail)" ng-click="addMailFieldForUpdate()" class="btn btn-info"><span class="glyphicon glyphicon-plus-sign"></span></a>
+            <a ng-show="showNewMailFieldForUpdate(mail)" ng-click="removeMailFieldForUpdate()" class="btn btn-info"><span class="glyphicon glyphicon-minus-sign"></span></a>
           </div>
 
           <button type="submit" class="btn btn-primary" ng-disabled="editAppForm.$invalid">Update</button>
