Documentation for Grandiosa is now available through a help link at top of the page

--- a/gateway-app/src/main/resources/web/gateway/lbform.html
+++ b/gateway-app/src/main/resources/web/gateway/lbform.html
@@ -95,7 +95,7 @@
   </div>
 
     <div class="form-group">
-        <label for="inLbSshKey">SSH Key</label>
+        <label for="inLbSshKey">SSH private key</label>
         <textarea rows="12" ng-model="lb.sshKey" class="form-control " id="inLbSshKey"
                required
                placeholder="Enter SSH key" ></textarea>
