--- a/gateway-app/src/main/resources/web/index.html
+++ b/gateway-app/src/main/resources/web/index.html
@@ -143,6 +143,10 @@
            </div>
         </div>
       </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#/help">Help</a></li>
+        </ul>
+
         <div class="nav navbar-nav navbar-right">
             <div class="alert alert-danger alert-dismissible alert-messages" id="messageDisplay"  style="display:none">
 
