--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -198,7 +198,9 @@
                            placeholder="Enter application name">
                     <span class="bg-danger" ng-show="createAppForm.name.$error.pattern">Invalid name: Cannot contain white-spaces. Use - instead</span>
                 </div>
-                <div class="form-group">
+              <H4>Paths</H4>
+                <div class = "row">
+                <div class="col-xs-4 form-group">
                     <label for="inAppPublicUrl2">Public path</label>
                     <input type="text" ng-model="newApp.publicUrl" class="form-control "
                            id="inAppPublicUrl2"
@@ -209,10 +211,10 @@
                     <span class="bg-danger" ng-show="createAppForm.publicUrl.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
                 </div>
 
-              <div class="form-group">
-                <label for="inAppPrivatePath">Private path</label>
+              <div class="col-xs-4 form-group">
+                <label for="inAppPrivatePath2">Private path</label>
                 <input type="text" ng-model="newApp.privatePath" class="form-control "
-                       id="inAppPrivatePath"
+                       id="inAppPrivatePath2"
                        name="privatepath"
                        ng-pattern="/^//"
                        required
@@ -220,7 +222,7 @@
                 <span class="bg-danger" ng-show="createAppForm.privatepath.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
               </div>
 
-                <div class="form-group">
+                <div class="col-xs-4 form-group">
                     <label for="inAppCheckPath2">Check path</label>
                     <input type="text" ng-model="newApp.checkPath" class="form-control "
                            id="inAppCheckPath2"
@@ -230,7 +232,7 @@
                            placeholder="Enter check path">
                     <span class="bg-danger" ng-show="createAppForm.checkpath.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
                 </div>
-
+                </div>
               <label>Emails (fields can be empty)</label>
               <div class="row form-group" data-ng-repeat = "mail in emailFields">
                 <div class="col-xs-4">
@@ -385,7 +387,7 @@
 <!-- Modal update Application app) -->
 <div class="modal fade" id="modalUpdateApp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
@@ -404,7 +406,9 @@
             <span class="bg-danger" ng-show="editAppForm.name.$error.pattern">Invalid name: Cannot contain white-spaces. Use - instead</span>
           </div>
 
-          <div class="form-group"
+          <H4>Paths</H4>
+          <div class = "row">
+          <div class="form-group col-xs-4"
                ng-class="{'has-error': editAppForm.publicUrl.$invalid && editAppForm.publicUrl.$dirty}">
             <label for="inAppPublicUrlUpdate">Public Path</label>
             <input type="text" ng-model="updateApp.publicUrl" class="form-control "
@@ -416,7 +420,7 @@
             <span class="bg-danger" ng-show="editAppForm.publicUrl.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
           </div>
 
-          <div class="form-group">
+          <div class="form-group col-xs-4">
             <label for="inAppPrivatePathUpdate">Private path</label>
             <input type="text" ng-model="updateApp.privatePath" class="form-control "
                    id="inAppPrivatePathUpdate"
@@ -427,7 +431,7 @@
             <span class="bg-danger" ng-show="editAppForm.privatepath.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
           </div>
 
-          <div class="form-group"
+          <div class="form-group col-xs-4"
                ng-class="{'has-error': editAppForm.checkPath.$invalid && editAppForm.checkPath.$dirty}">
             <label for="inAppCheckPathUpdate">Check path</label>
             <input type="text" ng-model="updateApp.checkPath" class="form-control "
@@ -438,7 +442,7 @@
                    placeholder="Enter check path">
             <span class="bg-danger" ng-show="editAppForm.checkPath.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
           </div>
-
+          </div>
           <label>Emails (fields can be empty)</label>
           <div class="row form-group" data-ng-repeat = "mail in updateEmails">
             <div class="col-xs-4">
